--- a/src/components/Link/Link.module.css
+++ b/src/components/Link/Link.module.css
@@ -19,18 +19,18 @@
  * Sub-components (only should apply to standalone links
  */
 .link__icon {
-  padding-left: calc(var(--eds-size-half) / 16 * 1rem);
+  padding-left: calc(var(--eds-spacing-size-half) / 16 * 1rem);
 
   /* Sub-component spacing */
   &.link--size-xl,
   &.link--size-lg {
-    padding-left: calc(var(--eds-size-1) / 16 * 1rem);
+    padding-left: calc(var(--eds-spacing-size-1) / 16 * 1rem);
   }
 
   &.link--size-md,
   &.link--size-sm,
   &.link--size-xs {
-    padding-left: calc(var(--eds-size-half) / 16 * 1rem);
+    padding-left: calc(var(--eds-spacing-size-half) / 16 * 1rem);
   }
 }
 
@@ -122,7 +122,6 @@
 }
 
 .link:focus-visible {
-  outline: calc(var(--eds-size-quarter) / 16 * 1rem) solid
-    var(--eds-theme-color-border-utility-focus);
-  outline-offset: calc(var(--eds-size-quarter) / 16 * 1rem);
+  outline: calc(var(--eds-spacing-size-quarter) / 16 * 1rem) solid var(--eds-theme-color-border-utility-focus);
+  outline-offset: calc(var(--eds-spacing-size-quarter) / 16 * 1rem);
 }
